Fix display of truncated filter labels.

--- a/bigsdb.css
+++ b/bigsdb.css
@@ -184,11 +184,6 @@ a.update {
 	background:#e0d5d5;
 }
 
-a.truncated {
-	text-decoration:none;
-	color:black;
-}
-
 .provisional {	
 	border:1px solid #c0c0c0;
 	background:#e0b5b5;
